RESOLVED FIXED281660
[scroll-animations] play-animation.html, reverse-animation.html and updating-the-finished-state.html WPT tests under scroll-animations/scroll-timelines are crashes
https://bugs.webkit.org/show_bug.cgi?id=281660
Summary [scroll-animations] play-animation.html, reverse-animation.html and updating-...
Antoine Quint
Reported 2024-10-17 03:15:26 PDT
Those tests crash and need fixing.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-17 03:15:39 PDT
Antoine Quint
Comment 2 2024-10-17 03:17:08 PDT
EWS
Comment 3 2024-10-17 11:40:21 PDT
Committed 285353@main (c25e4c092278): <https://commits.webkit.org/285353@main> Reviewed commits have been landed. Closing PR #35355 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.