[scroll-animations] play-animation.html, reverse-animation.html and updating-the-finished-state.html WPT tests under scroll-animations/scroll-timelines are crashes https://bugs.webkit.org/show_bug.cgi?id=281660 rdar://138102638

Reviewed by Anne van Kesteren.

Ensure we always use compatible times to compare with 0.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/play-animation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/reverse-animation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/updating-the-finished-state-expected.txt:
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::playState const):
(WebCore::WebAnimation::updateFinishedState):

Canonical link: https://commits.webkit.org/285353@main